--- a/src/app/components/hymn-options-sheet/hymn-options-sheet.component.html
+++ b/src/app/components/hymn-options-sheet/hymn-options-sheet.component.html
@@ -1,27 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Hymn Options</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="closeModal()">
-        <ion-icon name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-list>
-    <ion-item (click)="shareHymn()">
-      <ion-icon slot="start" name="share-outline"></ion-icon>
-      <ion-label>Share</ion-label>
-    </ion-item>
-    <!-- <ion-item (click)="addToFavorites()">
-      <ion-icon slot="start" name="heart-outline"></ion-icon>
-      <ion-label>Add to Favorites</ion-label>
-    </ion-item> -->
-    <ion-item (click)="openFeedbackModal()">
-      <ion-icon slot="start" name="chatbox-outline"></ion-icon>
-      <ion-label>Send Feedback</ion-label>
-    </ion-item>
-  </ion-list>
-</ion-content>
+<ion-list>
+  <ion-item button (click)="openFeedbackModal()">
+    <ion-icon color="primary" slot="end" name="chatbox-outline"></ion-icon>
+    <ion-text>Feedback</ion-text>
+  </ion-item>
+  <ion-item button (click)="shareHymn()">
+    <ion-icon color="primary" slot="end" name="share-outline"></ion-icon>
+    <ion-text>Share Hymn</ion-text>
+  </ion-item>
+</ion-list>
