--- a/src/app/pages/hymn-detail/hymn-detail.page.html
+++ b/src/app/pages/hymn-detail/hymn-detail.page.html
@@ -56,7 +56,7 @@
       <ng-container *ngIf="!audioUrl || audioError">
         <div class="audio-unavailable">
           <ion-icon name="alert-circle-outline"></ion-icon>
-          <span>{{ showEnglishTitles ? 'Audio not available yet' : 'Amajwi ntaraba aboneka' }}</span>
+          <span>{{ showEnglishTitles ? 'Audio not available yet' : 'Amajwi ntaraboneka' }}</span>
         </div>
       </ng-container>
 
